updated player PUT JSON to accept skipping turns